# omo_r2

./: README.md
omo_r2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r2_bringup/: package.xml  setup.cfg  setup.py
omo_r2_bringup/launch/: bringup.launch.py  lidar_rviz.launch.py
omo_r2_bringup/param/: g2.yaml  x4.yaml  x4pro.yaml
omo_r2_bringup/rviz/: ydlidar.rviz
omo_r2_cartographer/: package.xml  setup.cfg  setup.py
omo_r2_cartographer/config/: r2.lua  r2mini.lua
omo_r2_cartographer/launch/: cartographer.launch.py  omo_r2_cartographer.launch.py  omo_r2_cartographer_rviz.launch.py
omo_r2_description/: package.xml  setup.cfg  setup.py
omo_r2_description/launch/: description_rviz.launch.py
omo_r2_description/rviz/: description.rviz
omo_r2_description/urdf/: r2.urdf  r2mini.urdf
omo_r2_navigation/: package.xml  setup.cfg  setup.py
omo_r2_navigation/launch/: navigation_rviz.launch.py  omo_r2_navigation.launch.py  omo_r2_navigation_rviz.launch.py
omo_r2_navigation/param/: r2mini.yaml
omo_r2_robot/: package.xml  setup.cfg  setup.py
omo_r2_robot/launch/: robot.launch.py
omo_r2_robot/omo_r2_robot/: packet_handler.py  robot_control.py
omo_r2_robot/param/: r2.yaml  r2mini.yaml
omo_r2_teleop/: package.xml  setup.cfg  setup.py
omo_r2_teleop/launch/: omo_r2_teleop.launch.py  teleop.launch.py
omo_r2_teleop/omo_r2_teleop/: teleop_keyboard.py
