<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r2</name>
  <version>0.0.0</version>
  <description>Meta package for omo_r2</description>
  <maintainer email="t.shaped.person@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>omo_r2_bringup</depend>
  <depend>omo_r2_cartographer</depend>
  <depend>omo_r2_description</depend>
  <depend>omo_r2_navigation</depend>
  <depend>omo_r2_robot</depend>
  <depend>omo_r2_teleop</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
