<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r2_bringup</name>
  <version>0.0.0</version>
  <description>Launch scripts for starting the omo_r2</description>
  <maintainer email="t.shaped.person@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>omo_r2_description</depend>
  <depend>omo_r2_robot</depend>
  <depend>ydlidar_ros2_driver</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
