<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r2_cartographer</name>
  <version>0.0.0</version>
  <description>Launch scripts for cartographer</description>
  <maintainer email="t.shaped.person@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>cartographer_ros</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
